--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "sonobus/src"]
 	path = sonobus/src
 	url = https://github.com/essej/sonobus.git
+[submodule "aj-snapshot/src"]
+	path = aj-snapshot/src
+	url = git://git.code.sf.net/p/aj-snapshot/code
