--- a/jamulus/jamulus-3.7.0/debian/control
+++ b/jamulus/jamulus-3.7.0/debian/control
@@ -6,6 +6,7 @@ Build-Depends:
  build-essential,
  debhelper (>= 11),
  libjack-jackd2-dev,
+ qtbase5-dev,
  qt5-default,
  qt5-qmake,
  qtdeclarative5-dev,
