--- a/jamulus/jamulus-3.7.0/debian/rules
+++ b/jamulus/jamulus-3.7.0/debian/rules
@@ -6,7 +6,7 @@ export QT_SELECT=qt5
 	dh $@
 
 override_dh_auto_configure:
-	mkdir -p build-gui && cd build-gui && qmake TARGET=jamulus PREFIX=/usr ../Jamulus.pro
+	mkdir -p build-gui && cd build-gui && qmake "CONFIG+=noupcasename" TARGET=Jamulus PREFIX=/usr ../Jamulus.pro
 
 override_dh_auto_build:
 	cd src/res/translation && lrelease *.ts
