--- a/.gitmodules
+++ b/.gitmodules
@@ -48,3 +48,6 @@
 [submodule "alsa-topology-conf/src"]
 	path = alsa-topology-conf/src
 	url = https://github.com/alsa-project/alsa-topology-conf.git
+[submodule "midipp/src"]
+	path = midipp/src
+	url = https://github.com/hselasky/midipp.git
