move jack setting

--- a/midipp/midipp-2.1.1/debian/rules
+++ b/midipp/midipp-2.1.1/debian/rules
@@ -2,6 +2,7 @@
 
 export QT_SELECT=qt5
 export DEB_BUILD_OPTIONS=nostrip
+export HAVE_JACK=1
 
 %:
 	dh $@
@@ -11,7 +12,7 @@ override_dh_auto_configure:
 	mkdir -p build && cd build && qmake INCLUDEPATH+=../libumidi LIBS+=-L../libumidi PREFIX=/usr/local QMAKE_CFLAGS_ISYSTEM=-I -o Makefile.unix ../midipp.pro 
 
 override_dh_auto_build:
-	$(shell cd libumidi && bmake clean && HAVE_JACK=1 bmake)
+	$(shell cd libumidi && bmake clean && bmake)
 	cd build && make -j`nproc` -f Makefile.unix all
 
 override_dh_auto_install:
