update jacktrip to 1.4.0

--- a/jacktrip/jacktrip-1.4.0/debian/control
+++ b/jacktrip/jacktrip-1.4.0/debian/control
@@ -22,6 +22,10 @@ Depends:
  ${shlibs:Depends},
  ${misc:Depends},
  adduser (>= 3.0)
+Conflicts:
+ qjacktrip
+Replaces:
+ qjacktrip
 Description: Low latency peer-to-peer audio streaming.
  Jacktrip is an application for streaming high-quality,
  low-latency peer-to-peer audio between devices
