conform jackd2 to salsa.debian.org release

--- a/jackd2/debian/control
+++ b/jackd2/debian/control
@@ -2,26 +2,28 @@ Source: jackd2
 Section: sound
 Priority: optional
 Maintainer: Debian Multimedia Maintainers <debian-multimedia@lists.debian.org>
-Uploaders: Adrian Knoth <adi@drcomp.erfurt.thur.de>, Reinhard Tartler <siretart@tauware.de>
-Build-Depends: cdbs (>= 0.4.93~),
- debhelper (>= 10),
- python3,
- dh-python,
- libsamplerate-dev,
- libasound2-dev (>= 1.0.18) [linux-any],
- libdbus-1-dev,
- libexpat1-dev,
- libsndfile1-dev,
- libncurses-dev,
- libreadline-dev,
- libraw1394-dev [linux-any],
- libffado-dev (>= 2.0.0) [linux-any],
- libopus-dev,
- libsystemd-dev [linux-any],
- libzita-alsa-pcmi-dev,
- libzita-resampler-dev,
- po-debconf
-Standards-Version: 4.5.1
+Uploaders: Adrian Knoth <adi@drcomp.erfurt.thur.de>,
+           Reinhard Tartler <siretart@tauware.de>
+Build-Depends: debhelper-compat (= 13),
+               dh-exec,
+               dh-sequence-python3,
+               libasound2-dev (>= 1.0.18) [linux-any],
+               libdb-dev,
+               libdbus-1-dev,
+               libexpat1-dev,
+               libffado-dev (>= 2.0.0) [linux-any],
+               libncurses-dev,
+               libopus-dev,
+               libraw1394-dev [linux-any],
+               libreadline-dev,
+               libsamplerate-dev,
+               libsndfile1-dev,
+               libsystemd-dev [linux-any],
+               libzita-alsa-pcmi-dev,
+               libzita-resampler-dev,
+               po-debconf,
+               python3:any
+Standards-Version: 4.6.0
 Rules-Requires-Root: no
 Homepage: https://jackaudio.org/
 Vcs-Git: https://salsa.debian.org/multimedia-team/jackd2.git
@@ -29,24 +31,17 @@ Vcs-Browser: https://salsa.debian.org/multimedia-team/jackd2
 
 Package: jackd2
 Architecture: any
-Replaces: libjack0 (<= 1.9.5~dfsg-13),
-	jackd (<< 3),
-	jack-daemon
+Replaces: jack-daemon, jackd (<< 3), libjack0 (<= 1.9.5~dfsg-13)
 Provides: jack-daemon
-Conflicts: jack-daemon,
-	jackd (<< 3)
-Depends: ${shlibs:Depends},
- ${misc:Depends},
- ${python3:Depends},
- coreutils (>= 4.0),
- python3-dbus,
- debconf | debconf-2.0,
- libjack-jackd2-0 (= ${binary:Version})
-Recommends: qjackctl,
- libpam-modules,
- jackd2-firewire [amd64 i386 powerpc]
-Suggests: jack-tools,
- meterbridge
+Conflicts: jack-daemon, jackd (<< 3)
+Depends: debconf | debconf-2.0,
+         libjack-jackd2-0 (= ${binary:Version}),
+         python3-dbus,
+         ${misc:Depends},
+         ${python3:Depends},
+         ${shlibs:Depends}
+Recommends: jackd2-firewire [amd64 i386 powerpc], libpam-modules, qjackctl
+Suggests: jack-tools, meterbridge
 Description: JACK Audio Connection Kit (server and example clients)
  JACK is a low-latency sound server, allowing multiple applications to
  connect to one audio device, and to share audio between themselves.
@@ -56,16 +51,15 @@ Description: JACK Audio Connection Kit (server and example clients)
 Package: libjack-jackd2-0
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends},
- ${misc:Depends}
-Conflicts: jackd2 (>> ${binary:Version}),
- jackd2 (<< ${binary:Version}),
- libjack0,
- libjack-0.116,
- libjack-0.125
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Conflicts: jackd2 (<< ${binary:Version}),
+           jackd2 (>> ${binary:Version}),
+           libjack-0.116,
+           libjack-0.125,
+           libjack0
 Suggests: jackd2 (= ${binary:Version})
 Provides: libjack-0.116, libjack-0.125
-Replaces: libjack-0.116, libjack-0.125, jackd2 (<< 1.9.10+20150825git1ed50c92~dfsg-5)
+Replaces: libjack-0.116, libjack-0.125
 Multi-Arch: same
 Description: JACK Audio Connection Kit (libraries)
  JACK is a low-latency sound server, allowing multiple applications to
@@ -78,9 +72,7 @@ Architecture: amd64 i386 powerpc
 Provides: jackd-firewire
 Replaces: jackd-firewire
 Conflicts: jackd-firewire
-Depends: ${shlibs:Depends},
- ${misc:Depends},
- jackd2 (= ${binary:Version})
+Depends: jackd2 (= ${binary:Version}), ${misc:Depends}, ${shlibs:Depends}
 Description: JACK Audio Connection Kit (FFADO backend)
  JACK is a low-latency sound server, allowing multiple applications to
  connect to one audio device, and to share audio between themselves.
@@ -91,15 +83,9 @@ Package: libjack-jackd2-dev
 Architecture: any
 Section: libdevel
 Multi-Arch: same
-Depends: libjack-jackd2-0 (= ${binary:Version}),
- ${misc:Depends},
- ${shlibs:Depends},
- pkg-config
-Conflicts: libjack0.100.0-dev (<< 0.102.20-2),
- libjack-dev
-Provides: libjack0.100.0-dev,
- libjack-dev-session,
- libjack-dev
+Depends: libjack-jackd2-0 (= ${binary:Version}), pkg-config, ${misc:Depends}
+Conflicts: libjack-dev, libjack0.100.0-dev (<< 0.102.20-2)
+Provides: libjack-dev, libjack-dev-session, libjack0.100.0-dev
 Replaces: libjack0.71.2-0 (<< 0.75.0-1)
 Description: JACK Audio Connection Kit (development files)
  JACK is a low-latency sound server, allowing multiple applications to
