update jamulus remote

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "jamulus/src"]
 	path = jamulus/src
-	url = https://github.com/corrados/jamulus.git
+	url = https://github.com/jamulussoftware/jamulus.git
 [submodule "sonobus/src"]
 	path = sonobus/src
 	url = https://github.com/essej/sonobus.git
