--- a/mididings/debian/control
+++ b/mididings/debian/control
@@ -10,7 +10,7 @@ Build-Depends:
  libglib2.0-dev,
  libjack-jackd2-dev,
  python3 (>= 3.7),
- python3.7-dev,
+ python3-dev (>= 3.7),
  python3-liblo,
  python3-dbus,
  python3-decorator,
