--- a/midipp/debian/rules
+++ b/midipp/debian/rules
@@ -1,18 +1,14 @@
 #!/usr/bin/make -f
 
 export QT_SELECT=qt5
-export DEB_BUILD_OPTIONS=nostrip
-export HAVE_JACK=1
 
 %:
 	dh $@
 
 override_dh_auto_configure:
-	echo 'SHLIB_SHFLAGS=-Wl,--soname=lib$${LIB}.so.$${SHLIB_SOVERSION}' >> libumidi/Makefile
-	mkdir -p build && cd build && qmake INCLUDEPATH+=../libumidi LIBS+=-L../libumidi PREFIX=/usr/local QMAKE_CFLAGS_ISYSTEM=-I -o Makefile.unix ../midipp.pro 
+	mkdir -p build && cd build && qmake HAVE_JACK=1 HAVE_ALSA=1 HAVE_STATIC=1 PREFIX=/usr/local LIBUMIDIPATH=../libumidi QMAKE_CFLAGS_ISYSTEM=-I -o Makefile.unix ../midipp.pro
 
 override_dh_auto_build:
-	$(shell cd libumidi && bmake clean && bmake)
 	cd build && make -j`nproc` -f Makefile.unix all
 
 override_dh_auto_install:
